--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
 </head>
   <body class="font-display bg-background-light dark:bg-background-dark text-[#111618] dark:text-gray-200">
     <div id="root"></div>
+
+    <script type="module" src="/src/main.tsx"></script>
+    
   </body>
 </html>
